<?xml version="1.0" encoding="UTF-8"?>

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>jplugman</groupId>
    <artifactId>jplugman</artifactId>
    <version>2.0.7-SNAPSHOT</version>
    <packaging>pom</packaging>

    <name>${application.name}</name>

    <properties>
        <application.name>JPlugman</application.name>
        <perobobbot.version>1.0.0-SNAPSHOT</perobobbot.version>
        <java.version>15</java.version>
        <lombok.version>1.18.20</lombok.version>
        <log4j.version>2.11.2</log4j.version>
        <junit.version>5.8.0-M1</junit.version>
    </properties>

    <distributionManagement>
        <repository>
            <id>github</id>
            <name>GitHub Bastien Aracil Apache Maven Packages</name>
            <url>https://maven.pkg.github.com/baracil/JPlugman</url>
        </repository>
    </distributionManagement>

    <dependencies>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-api</artifactId>
            <version>2.11.2</version>
        </dependency>
    </dependencies>


    <modules>
        <module>jplugman.annotation</module>
        <module>jplugman.api</module>
        <module>jplugman.tools</module>
        <module>jplugman.manager</module>
        <module>jplugman.loader</module>
        <module>test/jplugman.test</module>
        <module>test/jplugman.test.lib</module>
        <module>test/jplugman.test.api</module>
        <module>test/jplugman.test.core</module>
        <module>test/jplugman.test.plugin1a</module>
        <module>test/jplugman.test.plugin1b</module>
        <module>test/jplugman.test.plugin1c</module>
        <module>test/jplugman.test.plugin2</module>
        <module>test/jplugman.test.plugin3</module>
        <module>test/jplugman.test.plugin4</module>
        <module>test/jplugman.test.plugin5</module>
        <module>test/jplugman.test.plugin6</module>
        <module>test/jplugman.test.plugin7</module>
        <module>test/jplugman.test.plugin8</module>
    </modules>


    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>jplugman</groupId>
                <artifactId>jplugman-annotation</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>jplugman</groupId>
                <artifactId>jplugman-api</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>jplugman</groupId>
                <artifactId>jplugman-manager</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>jplugman</groupId>
                <artifactId>jplugman-loader</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>jplugman</groupId>
                <artifactId>jplugman-test-core</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>jplugman</groupId>
                <artifactId>jplugman-test-lib</artifactId>
                <version>${project.version}</version>
            </dependency>

            <dependency>
                <groupId>org.apache.logging.log4j</groupId>
                <artifactId>log4j-api</artifactId>
                <version>${log4j.version}</version>
            </dependency>

            <dependency>
                <groupId>org.apache.logging.log4j</groupId>
                <artifactId>log4j-core</artifactId>
                <version>${log4j.version}</version>
            </dependency>

            <dependency>
                <groupId>org.junit.jupiter</groupId>
                <artifactId>junit-jupiter</artifactId>
                <version>${junit.version}</version>
            </dependency>
            <dependency>
                <groupId>org.junit.jupiter</groupId>
                <artifactId>junit-jupiter-params</artifactId>
                <version>${junit.version}</version>
            </dependency>

            <dependency>
                <groupId>org.projectlombok</groupId>
                <artifactId>lombok</artifactId>
                <version>${lombok.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>


    <build>
        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <filtering>false</filtering>
            </resource>
            <resource>
                <directory>src/main/resources-with-filtering</directory>
                <filtering>true</filtering>
            </resource>
        </resources>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-resources-plugin</artifactId>
                <configuration>
                    <encoding>UTF-8</encoding>
                    <delimiters>
                        <delimiter>${*}</delimiter>
                    </delimiters>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <target>${java.version}</target>
                    <source>${java.version}</source>
                    <encoding>UTF-8</encoding>
                    <compilerArgs>
                        <compilerArg>-parameters</compilerArg>
                    </compilerArgs>
                    <annotationProcessorPaths>
                        <invalid-on-purpose>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                            <version>${lombok.version}</version>
                        </invalid-on-purpose>
                    </annotationProcessorPaths>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>build-helper-maven-plugin</artifactId>
                <version>3.2.0</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>rootlocation</goal>
                        </goals>
                        <configuration>
                            <rootLocationProperty>root-location</rootLocationProperty>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
        <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
            <plugins>
                <!-- clean lifecycle, see https://maven.apache.org/ref/current/maven-core/lifecycles.html#clean_Lifecycle -->
                <plugin>
                    <artifactId>maven-clean-plugin</artifactId>
                    <version>3.1.0</version>
                </plugin>
                <!-- default lifecycle, jar packaging: see https://maven.apache.org/ref/current/maven-core/default-bindings.html#Plugin_bindings_for_jar_packaging -->
                <plugin>
                    <artifactId>maven-resources-plugin</artifactId>
                    <version>3.1.0</version>
                </plugin>
                <plugin>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.8.1</version>
                </plugin>
                <plugin>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>3.0.0-M5</version>
                </plugin>
                <plugin>
                    <artifactId>maven-jar-plugin</artifactId>
                    <version>3.2.0</version>
                </plugin>
                <plugin>
                    <artifactId>maven-install-plugin</artifactId>
                    <version>2.5.2</version>
                </plugin>
                <plugin>
                    <artifactId>maven-deploy-plugin</artifactId>
                    <version>2.8.2</version>
                </plugin>
                <!-- site lifecycle, see https://maven.apache.org/ref/current/maven-core/lifecycles.html#site_Lifecycle -->
                <plugin>
                    <artifactId>maven-site-plugin</artifactId>
                    <version>3.8.2</version>
                </plugin>
                <plugin>
                    <artifactId>maven-project-info-reports-plugin</artifactId>
                    <version>3.0.0</version>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>

    <profiles>
        <profile>
            <id>build plugins</id>
            <activation>
                <property>
                    <name>build-test</name>
                    <value>true</value>
                </property>
            </activation>
            <properties>
                <skipTests>true</skipTests>
                <build-plugin-phase>package</build-plugin-phase>
            </properties>
        </profile>
        <profile>
            <id>no plugin build</id>
            <activation>
                <activeByDefault/>
            </activation>
            <properties>
                <build-plugin-phase>none</build-plugin-phase>
            </properties>
        </profile>
    </profiles>
</project>
